<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.velopayments.blockchain</groupId>
    <artifactId>velochain-sdk-parent</artifactId>
    <version>1.0.${revision}</version>

    <name>velochain-sdk-parent</name>

    <description>Velochain SDK</description>
    <packaging>pom</packaging>

    <modules>
        <module>sdk</module>
        <module>sdk-all</module>
        <module>examples</module>
        <module>distrib</module>
    </modules>

    <properties>
        <revision>0-SNAPSHOT</revision>
        <vjblockchain.version>0.3.4</vjblockchain.version>

        <minimum-maven.version>3.6.2</minimum-maven.version>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <resource.delimiter>@</resource.delimiter>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <flatten-maven-plugin.version>1.2.1</flatten-maven-plugin.version>
        <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
        <lombok-maven-plugin.version>1.18.10.0</lombok-maven-plugin.version>
        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
        <maven-failsafe-plugin.version>3.0.0-M4</maven-failsafe-plugin.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
        <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
        <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
        <gmavenplus-plugin.version>1.8.1</gmavenplus-plugin.version>

        <testcontainers.version>1.9.1</testcontainers.version>
        <apache-httpclient.version>4.5.12</apache-httpclient.version>
        <cryptofs.version>1.9.10</cryptofs.version>
        <lombok.version>1.18.8</lombok.version>
        <jackson.version>2.11.0</jackson.version>
        <slf4j.version>1.7.25</slf4j.version>
        <junit.version>4.13.1</junit.version>
        <assertj.version>3.11.1</assertj.version>
        <awaitility.version>3.1.2</awaitility.version>
        <mockito.version>1.9.5</mockito.version>
        <groovy.version>2.5.8</groovy.version>
        <spock.version>1.3-groovy-2.5</spock.version>
        <yarn.version>v1.12.0</yarn.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.velopayments.blockchain</groupId>
                <artifactId>vjblockchain-java</artifactId>
                <version>${vjblockchain.version}</version>
                <classifier>${platform}</classifier>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.cryptomator</groupId>
                <artifactId>cryptofs</artifactId>
                <version>${cryptofs.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j.version}</version>
                <scope>runtime</scope>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jdk8</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy-all</artifactId>
                <version>${groovy.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility</artifactId>
                <version>${awaitility.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility-groovy</artifactId>
                <version>${awaitility.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-all</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers</artifactId>
                <version>${testcontainers.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.gmavenplus</groupId>
                <artifactId>gmavenplus-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>addSources</goal>
                            <goal>addTestSources</goal>
                            <goal>generateStubs</goal>
                            <goal>compile</goal>
                            <goal>generateTestStubs</goal>
                            <goal>compileTests</goal>
                            <goal>removeStubs</goal>
                            <goal>removeTestStubs</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <classesDirectory>${project.build.outputDirectory}</classesDirectory>
                    <argLine>--illegal-access=permit</argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <classesDirectory>${project.build.outputDirectory}</classesDirectory>
                    <argLine>--illegal-access=permit</argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
                <configuration>
                    <delimiters>
                        <delimiter>${resource.delimiter}</delimiter>
                    </delimiters>
                    <useDefaultDelimiters>false</useDefaultDelimiters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-maven-plugin</artifactId>
                <version>${lombok-maven-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>artifact-management</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[${minimum-maven.version},)</version>
                                </requireMavenVersion>
                                <banDistributionManagement />
                                <requireNoRepositories>
                                    <message>Don't define unsupported repositories in pom.xml</message>
                                    <allowedRepositories>velo-nexus,central,velo-thirdparty,spring-releases,spring-milestones,bintray,spring-snapshots</allowedRepositories>
                                    <allowedPluginRepositories>velo-nexus,central</allowedPluginRepositories>
                                    <allowSnapshotRepositories>velo-nexus-snapshots,central</allowSnapshotRepositories>
                                    <allowSnapshotPluginRepositories>velo-nexus-snapshots,central</allowSnapshotPluginRepositories>
                                </requireNoRepositories>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>osx</id>
            <activation>
                <os>
                    <!--should be okay with just family for osx-->
                    <family>mac</family>
                </os>
            </activation>
            <properties>
                <platform>osx</platform>
            </properties>
        </profile>
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <family>unix</family>
                    <name>linux</name>
                </os>
            </activation>
            <properties>
                <platform>linux</platform>
            </properties>
        </profile>
    </profiles>

    <scm>
        <developerConnection>scm:git:ssh://git@github.com/VeloPayments/velochain-sdk.git</developerConnection>
    </scm>
</project>
